Added a configuration object for the uploader where it was initially using efisales config Reading credentials from file instead of env variable to be compatible with windows server Removed deprecated Base64Encoder and used new Base64.getEncoder() in java 8+