@@ -1,10 +1,10 @@
 package com.fileuploader;
 
 import java.security.*;
-import java.security.spec.InvalidKeySpecException;
+import java.util.Base64;
 import javax.crypto.*;
 import javax.crypto.spec.SecretKeySpec;
-import sun.misc.*;
+
 
 public class Encryptor {
 	private static final String ALGO="AES";
@@ -19,19 +19,19 @@ public class Encryptor {
 		Cipher c= Cipher.getInstance(ALGO);
 		c.init(Cipher.ENCRYPT_MODE, key);
 		byte[] encVal= c.doFinal(plainText.getBytes());
-		String encryptedValue= new BASE64Encoder().encode(encVal);
+		String encryptedValue= Base64.getEncoder().encodeToString(encVal);
 		
 		return encryptedValue;
 	}
 	
-	public static String Decrypt(String CipherText)
+	public static String Decrypt(String cipherText)
 			throws Exception{
 		Key key= generateKey();
 		
 		Cipher c= Cipher.getInstance(ALGO);
 		c.init(Cipher.DECRYPT_MODE, key);
 		
-		byte[] decodedValue= new BASE64Decoder().decodeBuffer(CipherText);
+		byte[] decodedValue= Base64.getDecoder().decode(cipherText);
 		
 		byte[] decValue= c.doFinal(decodedValue);
 		
